updated mailing list links and added a link for corrections

--- a/vtunsite/mlist.html
+++ b/vtunsite/mlist.html
@@ -49,8 +49,19 @@
                       <li>
 			<font face="Verdana" color="#000000">
 			   <a
-			   href="http://www.geocrawler.com/redir-sf.php3?list=vtun-users">
+			   href="http://sourceforge.net/mailarchive/forum.php?forum=vtun-users">
 			   Archives
+			   </a>
+			   (Whenever SF fixes them)
+			</font>
+   		      </li>
+                    </ul>
+		    <ul>
+                      <li>
+			<font face="Verdana" color="#000000">
+			   <a
+			   href="http://geocrawler.com/lists/3/SourceForge/12163/0/">
+			   Old Archives
 			   </a>
 			</font>
    		      </li>
@@ -60,7 +71,7 @@
 			<font face="Verdana" color="#000000">
 			   <a
 			   href="http://lists.bikeworld.com/pipermail/vtun">
-			   Old mailing list archives
+			   Older mailing list archives
 			   </a>
 			</font>
    		      </li>
@@ -96,12 +107,22 @@
                       <li>
 			<font face="Verdana" color="#000000">
 			   <a
-			   href="http://www.geocrawler.com/redir-sf.php3?list=vtun-devel">
+			   href="http://sourceforge.net/mailarchive/forum.php?forum=vtun-devel">
 			   Archives
+			   </a> (Whenever SF fixes them)
+			</font>
+		      </li>
+		    </ul>
+		    <ul>
+                      <li>
+			<font face="Verdana" color="#000000">
+			   <a
+			   href="http://geocrawler.com/lists/3/SourceForge/12162/0/">
+			   Old Archives
 			   </a>
 			</font>
 		      </li>
-                    </ul>
+		    </ul>
 	            <br><br><br>
                  </td>
               </tr>
@@ -109,10 +130,14 @@
        </td>
        </tr>
    </table>
+   <font face="Verdana" color="#000000">
+   Some of those links may not work, especially if it has been a week since they last worked.
+   </font>
+
    <br><br>
    <font face="Verdana"> 
-      Copyright (C) 1999-2001 Maxim Krasnyansky
+      Copyright (C) 1999-2003 Maxim Krasnyansky<br>
    </font>
-</center>
+   <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   </center>
 </body>
 </html>
