--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -146,8 +146,9 @@
    <img SRC="http://vtun.sourceforge.net/cgi-bin/count.cgi?df=vtun_download&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
    <br><br>
    <font face="Verdana"> 
-      Copyright (C) 1999-2003 Maxim Krasnyansky
+      Copyright (C) 1999-2003 Maxim Krasnyansky<br>
    </font>
+   <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
 </center>
 </body>
 </html>
