--- a/vtunsite/faq.html
+++ b/vtunsite/faq.html
@@ -64,7 +64,7 @@ VTun - Frequently Asked Questions
 <dl><a href="#1.18"> 1.18 Why do routes specified after 'ppp' command in config file produce errors and don't install correctly ?   </a></dl> 
 <dl><a href="#1.19"> 1.19 How secure is VTun ? </a></dl> 
 <dl><a href="#1.20"> 1.20 Who has developed so nice and cool software ? </a></dl> 
-<dl><a href="#1.21"> 1.21 I don't like VTun where can I send complains ? </a></dl> 
+<dl><a href="#1.21"> 1.21 I don't like VTun.  Where can I send complains ? </a></dl> 
 <dl><a href="#1.22"> 1.22 Where can I get more information about VTun ? </a></dl> 
 <dl><a href="#1.23"> 1.23 Can I use vtun over SSH ? </a></dl> 
 </ul> 
@@ -195,7 +195,7 @@ VTun - Frequently Asked Questions
 &nbsp;Thanks :). You can find list of VTun team members on the web site or<br> 
 &nbsp;in the 'Credits' file in VTun package.&nbsp;&nbsp;<br> 
 <br> 
-<a name="1.21"> 1.21 I don't like VTun where can I send complains ? </a><br> 
+<a name="1.21"> 1.21 I don't like VTun.  Where can I send complains ? </a><br> 
 &nbsp;You can send them to /dev/null. <br> 
 <br> 
 <a name="1.22"> 1.22 Where can I get more information about VTun ? </a><br> 
