added question 1.24, although it looks to need fixing again

--- a/vtunsite/faq.html
+++ b/vtunsite/faq.html
@@ -67,6 +67,7 @@ VTun - Frequently Asked Questions
 <dl><a href="#1.21"> 1.21 I don't like VTun.  Where can I send complains ? </a></dl> 
 <dl><a href="#1.22"> 1.22 Where can I get more information about VTun ? </a></dl> 
 <dl><a href="#1.23"> 1.23 Can I use vtun over SSH ? </a></dl> 
+<dl><a href="#1.24"> 1.24 Is it possible to establish a vtun link from a client behind NAT/firewall?</a></dl>
 </ul> 
 <b>2. Error Messages</b> 
 <ul> 
@@ -216,6 +217,11 @@ VTun - Frequently Asked Questions
 &nbsp;work$ vtund -s home_tunnel_config<br> 
 &nbsp;...<br> 
 &nbsp;home$ vtund home_tunnel_config localhost<br> 
+<br>
+<a name="1.24"> 1.24 Is it possible to establish a vtun link from a client behind NAT or a firewall?</a><br>
+&nbsp;Yes it is, but you need to use TCP protocol.<br>
+
+
 <br> 
 <b>2. Error Messages</b><br> 
 <a name="2.1"> 2.1 Why do I see no vtund log and error messages ? </a><br> 
