move absolute to relative URL on count.cgi hit, to make page a bit more more mirror-friendly

--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -143,7 +143,7 @@
        </tr>
    </table>
    <br><br>
-   <img SRC="http://vtun.sourceforge.net/cgi-bin/count.cgi?df=vtun_download&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
+   <img SRC="/cgi-bin/count.cgi?df=vtun_download&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
    <br><br>
    <font face="Verdana"> 
       Copyright (C) 1999-2003 Maxim Krasnyansky<br>
