--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -168,7 +168,7 @@
        </tr>
    </table>
    <br><br>
-   <img SRC="http://vtun.sourceforge.net/cgi-bin/count.cgi?df=vtun_main&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
+   <img SRC="/cgi-bin/count.cgi?df=vtun_main&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
    <br><br>
    <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=978&type=1" BORDER=0
    height=31 width=88></a>
