removed vtun.euronet.be mirror ; added vtun.info mirror

--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -146,9 +146,6 @@
                       <li>
 		        <font face="Verdana" color="#000000">Web site mirrors</font>
 			<dl>
-			   <a href="http://vtun.euronet.be">EuroNet.be (Belgium)</a>
-			</dl>
-			<dl>
 			   <a href="http://vtun.saol.com">Saol.com (South Africa)</a>
 			</dl>
 			<dl>
@@ -156,6 +153,9 @@
 			</dl>
 			<dl>
 			   <a href="http://mirror.blackroute.net/vtun">Blackroute.net (USA)</a>
+			</dl>
+			<dl>
+			   <a href="http://vtun.info">Vtun.Info (Canada)</a>
 			</dl>
    		      </li>
                     </ul>
