Added Dale, and others, to team.html

--- a/vtunsite/team.html
+++ b/vtunsite/team.html
@@ -203,6 +203,22 @@
   <a href=mailto:kevin@labsysgrp.com> Kevin P. Fleming  </a> <br>
     Makefile and config parser enhancement. <br>
     Other minor fixes and suggestions. <br>
+  </font></li>
+  <li><font face="Verdana" color="#000000">
+  <a href=mailto:rrw@hell.pl> Robert R. Wal </a> <br>
+    Added support for iproute command. <br>
+  </font></li>
+  <li><font face="Verdana" color="#000000">
+  <a href=mailto:willems.luc@pandora.be> Willems Luc  </a> <br>
+    Initial SuSE packaging.  Testing. <br>
+  </font></li>
+  <li><font face="Verdana" color="#000000">
+  <a href=mailto:dpf-vtun@fountainbay.com> Dale Fountain </a> <br>
+    Added multiple cipher support. <br>
+    Added multiple cipher modes support. <br>
+    Added support for different sized keys. <br>
+    Re-sync ciphers when using non-ECB modes over a UDP connection. <br>
+    Fixed Bug#908824 (persist=keep not re-applying routes) <br>
 </ul>
 <br></p>
 
