she's not my wife;  she's max's

--- a/vtunsite/team.html
+++ b/vtunsite/team.html
@@ -61,7 +61,7 @@
 <p align="justify">
 <ul>
   <li><font face="Verdana" color="#000000">
-  <a href=mailto:gayaneh@yahoo.com> Gayaneh Krasnyanskaya(my wife:)))  </a> <br>
+  <a href=mailto:gayaneh@yahoo.com> Gayaneh Krasnyanskaya(Max's wife:)))  </a> <br>
     Initial Web site creation. And a lot of other help :)))   <br>
   </font></li>
   <li><font face="Verdana" color="#000000">
