removal of netpedia link, thanks to Jim Stephens

--- a/vtunsite/tun/faq.html
+++ b/vtunsite/tun/faq.html
@@ -91,7 +91,7 @@ Universal TUN/TAP device driver Frequently Asked Question.
 <br> 
 <a name="1.4"> 1.4 What is TUN/TAP driver used for? </a><br> 
 &nbsp;As mentioned above, main purpose of TUN/TAP driver is tunneling. <br> 
-&nbsp;It used by VTun (http://vtun.netpedia.net).<br> 
+&nbsp;It used by VTun (http://vtun.info).<br> 
 <br> 
 <a name="1.5"> 1.5 How does Virtual network device actually work ?  </a><br> 
 &nbsp;Virtual network device can be viewed as a simple Point-to-Point or<br> 
