fix counter img reference

--- a/vtunsite/tun/index.html
+++ b/vtunsite/tun/index.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="Author" content="Maxim Krasnyansky">
-<meta name="Keywords" content="tun, tap, ethernet, tunnel, vtun, network">
-<meta name="Description" content="Universal TUN/TAP driver">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+<meta name="Author" content="Maxim Krasnyansky"/>
+<meta name="Keywords" content="tun, tap, ethernet, tunnel, vtun, network"/>
+<meta name="Description" content="Universal TUN/TAP driver"/>
 
 <title>
    Universal TUN/TAP driver
@@ -14,13 +14,13 @@
 <body bgcolor="#FFFFFF" vlink="#446DC4" link="#000000" text="#446DC4">
 
 <center>
-   <br>
+   <br/>
    <img src="tuntap.gif" width="535" height="109" alt="* TUN/TAP *">
-   <br>
+   <br/>
    <font face="Verdana"><b>
-   Virtual Point-to-Point(TUN) and Ethernet(TAP) devices<br>
+   Virtual Point-to-Point(TUN) and Ethernet(TAP) devices<br/>
    </b></font>
-   <br>
+   <br/>
    <table border="0" cellpadding="0" cellspacing="0" width="95%">
        <tr>
        <td align="center" valign="top" width="60%">
@@ -37,17 +37,17 @@
 		    <center>
 		    <table border=0 cellspacing=0 cellpadding=0 width="95%"><tr><td>	
 		    <font face="Verdana" color="#000000">
-			02.03.2001 Universal TUN/TAP driver 1.1 released<br>
-			05.08.2000 Universal TUN/TAP driver 1.0 released<br>
-			05.08.2000 Linux, Solaris and FreeBSD drivers merged<br>
+			02.03.2001 Universal TUN/TAP driver 1.1 released<br/>
+			05.08.2000 Universal TUN/TAP driver 1.0 released<br/>
+			05.08.2000 Linux, Solaris and FreeBSD drivers merged<br/>
 		    </font>
 		    </td></tr></table>
 		    </center>
-		    <br><br><br>
+		    <br/><br/><br/>
                  </td>
               </tr>
            </table>
-           <br>
+           <br/>
 	   <table border="1" cellpadding="0" cellspacing="0" width="98%">
               <tr>
                  <td align="center" valign="top" bgcolor="#446DC4">
@@ -72,11 +72,11 @@
 		       </li>
 		    </ul>
 		    </td></tr></table>
- 		    <br><br><br>
+ 		    <br/><br/><br/>
                  </td>
               </tr>
            </table>
-           <br>
+           <br/>
         </td>
         <td align="center" valign="top" width="50%">
 	   <table border="1" cellpadding="0" cellspacing="0" width="98%">
@@ -92,39 +92,39 @@
  		    <ul>
                       <li>
 		        <font face="Verdana" color="#000000">
-			Source<br> 
+			Source<br/> 
 			<a href="tun-1.1.tar.gz">tun-1.1.tar.gz</a><p>
 		        </font>
    		      </li>
                       <li>
 		        <font face="Verdana" color="#000000">
-			Linux<br> 
+			Linux<br/> 
 			<dl><a href="tun-1.1-6.rh62.i386.rpm">tun-1.1-6.rh62.i386.rpm(RH6.2)</a></dl>
 			<dl><a href="tun-1.1-6.rh71.i386.rpm">tun-1.1-6.rh71.i386.rpm(RH7.1)</a></dl>
 			<dl><a href="tun-1.1-6.rh72.i386.rpm">tun-1.1-6.rh72.i386.rpm(RH7.2)</a></dl>
 			<dl><a href="tun-1.1-6.col31.i386.rpm">tun-1.1-6.col31.i386.rpm(COL3.1)</a></dl>
-			<br>
+			<br/>
 		        </font>
    		      </li>
                       <li>
 		        <font face="Verdana" color="#000000">
-			Solaris<br> 
+			Solaris<br/> 
 			<a href="tun-1.0-sol70.i386.gz">tun-1.0-sol70.i386.gz</a><p>
 		        </font>
    		      </li>
                       <li>
 		        <font face="Verdana" color="#000000">
-			FreeBSD<br> 
+			FreeBSD<br/> 
 			<a href="tun-1.0-fbsd40.i386.tar.gz">tun-1.0-fbsd40.i386.tar.gz</a><p>
 		        </font>
    		      </li>
                     </ul>
 		    </font>
-		    <br><br>
+		    <br/><br/>
                  </td>
               </tr>
            </table>
-           <br>
+           <br/>
 	   <table border="1" cellpadding="0" cellspacing="0" width="98%">
               <tr>
                  <td align="center" valign="top" bgcolor="#446DC4">
@@ -138,27 +138,27 @@
 		    <font face="Verdana" >
  		    <ul>
                       <li>
-			<a href="mailto:max_mk@yahoo.com">Maxim Krasnyansky</a><br>
+			<a href="mailto:max_mk@yahoo.com">Maxim Krasnyansky</a><br/>
 			Linux and Solaris drivers<p>
    		      </li>
                       <li>
-			<a href="mailto:m_evmenkin@yahoo.com">Maksim Yevmenkin</a><br>
+			<a href="mailto:m_evmenkin@yahoo.com">Maksim Yevmenkin</a><br/>
 			FreeBSD driver
    		      </li>
                     </ul>
 		    </font>
- 		    <br>
+ 		    <br/>
                  </td>
               </tr>
            </table>
        </td>
        <tr>
    </table>
-   <br><br>
-   <img SRC="http://vtun.sourceforge.net/cgi-bin/count.cgi?df=tun_main&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
-   <br><br>
+   <br/><br/>
+   <img SRC="/cgi-bin/count.cgi?df=tun_main&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""> 
+   <br/><br/>
    <font face="Verdana"> 
-      Copyright (C) 1999-2003 Maxim Krasnyansky<br>
+      Copyright (C) 1999-2005 Maxim Krasnyansky<br/>
    </font>
    <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
 </center>
