replaced tun RPM reference for rh62, col31 ; added references for rh9, xos3, wbel3.

--- a/vtunsite/tun/index.html
+++ b/vtunsite/tun/index.html
@@ -99,10 +99,14 @@
                       <li>
 		        <font face="Verdana" color="#000000">
 			Linux<br/> 
-			<dl><a href="tun-1.1-6.rh62.i386.rpm">tun-1.1-6.rh62.i386.rpm(RH6.2)</a></dl>
+			<dl><a href="http://osdn.dl.sourceforge.net/sourceforge/vtun/tun-1.1-6.rh62.i386.rpm">tun-1.1-6.rh62.i386.rpm(RH6.2)</a></dl>
 			<dl><a href="tun-1.1-6.rh71.i386.rpm">tun-1.1-6.rh71.i386.rpm(RH7.1)</a></dl>
 			<dl><a href="tun-1.1-6.rh72.i386.rpm">tun-1.1-6.rh72.i386.rpm(RH7.2)</a></dl>
-			<dl><a href="tun-1.1-6.col31.i386.rpm">tun-1.1-6.col31.i386.rpm(COL3.1)</a></dl>
+			<dl><a href="http://osdn.dl.sourceforge.net/sourceforge/vtun/tun-1.1-6.col31.i386.rpm">tun-1.1-6.col31.i386.rpm(COL3.1)</a></dl>
+			<dl><a href="http://osdn.dl.sourceforge.net/sourceforge/vtun/tun-1.1-7.2.src.rpm">tun-1.1-7.2.src.rpm</a></dl>
+			<dl><a href="http://osdn.dl.sourceforge.net/sourceforge/vtun/tun-1.1-7.rh9.i386.rpm">tun-1.1-7.rh9.i386.rpm</a></dl>
+			<dl><a href="http://osdn.dl.sourceforge.net/sourceforge/vtun/tun-1.1-7.2.wb30.i386.rpm">tun-1.1-7.2.wb30.i386.rpm</a></dl>
+			<dl><a href="http://osdn.dl.sourceforge.net/sourceforge/vtun/tun-1.1-7.2.xos3.i386.rpm">tun-1.1-7.2.xos3.i386.rpm</a></dl>
 			<br/>
 		        </font>
    		      </li>
