added Readme file with LZO/OpenSSL exemption from Markus Oberhumer

--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -88,6 +88,7 @@
 			<li>
 			  <a href="ChangeLog">Change Log</a>
 			</li>
+			<li><a href="README-LZO">LZO License Exemption</a></li>
 			<li>
 			  Man pages
 			  <dl><a href="vtund.man.html">Daemon</a></dl>
